# image-matting

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml
.cargo/: config.toml
backend/: lib.rs  main.rs
backend/controllers/: mod.rs  rembg.rs
backend/sessions/: base.rs  birefnet.rs  inpaint.rs  isnet.rs  mod.rs  u2net.rs
backend/utils/: image_helper.rs  mod.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/services/: api.ts
scripts/: RealESRGANExport.py
