[package]
name = "image-matting"
version = "0.1.0"
edition = "2021"
default-run = "image-matting"
authors = ["Jkin8010 <jkin8010@gmail.com>"]

[[bin]]
name = "start"
path = ".cargo/bin/start.rs"

[[bin]]
name = "image-matting"
path = "backend/main.rs"

[dependencies]
rocket = "0.5.1"
anyhow = "1.0.82"
serde = "1.0.167"
rocket_cors = "0.6"
rocket-multipart-form-data = "0.10.7"
ort = { version = "2.0.0-rc.4", features = [
    "load-dynamic",
    "fetch-models",
    "ndarray",
    "download-binaries",
    "copy-dylibs",
    "coreml",
    "cuda",
    "openvino",
] }
tokio = { version = "1.44.1", features = ["full"] }
dotenv = "0.15.0"
log = "0.4.26"
simple_logger = { version = "5.0.0", features = ["timestamps", "stderr"] }
smallvec = "1.15.0"
image = "0.25.6"
base64 = "0.22.1"
ndarray = "0.15.0"
ndarray-ndimage = "0.4.0"
thiserror = "2.0.12"
lazy_static = "1.4"
once_cell = "1.21.3"
chrono = "0.4.40"
tempfile = "3.10.0"

[dev-dependencies]
tsync = "2.0"
cargo-watch = "8.5.3"

[profile.dev]
rpath = true

[profile.release]
rpath = true
